--- a/HelloWorldnrf/Cargo.toml
+++ b/HelloWorldnrf/Cargo.toml
@@ -7,13 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-embedded-hal = "0.2.4"
 cortex-m-rt = "0.6.12"
 panic-halt = "0.2.0"
 defmt-rtt = "0.2.0"
-defmt = "0.2.0"
-rubble = { version = "0.0.4", git = "https://github.com/jonas-schievink/rubble" }
-rubble-nrf5x = { version = "0.0.4", default-features = false, git = "https://github.com/jonas-schievink/rubble" }
+nb = "0.1.2"
+embedded-hal = "0.2.6"
 
 [dependencies.microbit]
 path = "microbit"
@@ -24,8 +22,8 @@ path = "microbit-v2"
 optional = true
 
 [features]
-v1 = ["microbit", "rubble-nrf5x/51"]
-v2 = ["microbit-v2", "rubble-nrf5x/52833"]
+v1 = ["microbit"]
+v2 = ["microbit-v2"]
 
 default = [
   "defmt-default",
